WP Telegram Login: Fix the login form not visible when using LoginPress. (#314)
* Make the form always visible

* Add some spacing

* Change to relative units

* Add changelog

--- a/plugins/wptelegram-login/js/wp-login/style.scss
+++ b/plugins/wptelegram-login/js/wp-login/style.scss
@@ -6,17 +6,18 @@
 }
 #wptelegram-login-wrap {
 	display: none;
+	margin-top: 1rem;
 	/* position: absolute; */
-	padding-inline-start: 24px;
-	padding-inline-end: 24px;
+	padding-inline-start: 1.5rem;
+	padding-inline-end: 1.5rem;
 	text-align: center;
 }
 #loginform #wptelegram-login-wrap p {
 	color: #777777;
-	margin-bottom: 16px;
+	margin-bottom: 1rem;
 }
 .wptelegram-login-or {
-	margin-bottom: 16px;
+	margin-bottom: 1rem;
 	position: relative;
 	text-align: center;
 }
@@ -41,7 +42,7 @@
 .wptelegram-login-or span {
 	color: #777;
 	position: relative;
-	padding: 0 8px;
+	padding: 0 0.5rem;
 	text-transform: uppercase;
 }
 .wptelegram-login-clear:after {
